--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -43,7 +43,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         Learn More about Solana{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
-      <a className="quicklink quicklinkgreen " href="/solana/migration">
+      <a className="quicklink quicklinkgreen " href="/solana/migration/hotspot-operator">
         Read the Migration Guides{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
