--- a/docs/solana/migration/hotspot-operator.mdx
+++ b/docs/solana/migration/hotspot-operator.mdx
@@ -28,7 +28,7 @@ Some important notes:
 All existing Helium Hotspots from all Hotspot Manufacturers will become "LoRaWAN Hotspots".
 
 At the time of the Solana Migration, all existing "5G Hotspots" on the Helium Network are _also_
-LoRaWAN Hotspots.
+LoRaWAN Hotspots, but may not be enabled to operate as an active LoRaWAN hotspot.
 
 During the Solana Migration downtime, the 24-hour period in which the state of the Helium L1
 blockchain migrates to the Solana blockchain, the Helium Wallet App will present a "transitioning"
@@ -64,6 +64,7 @@ Solana Migration completes to see all Hotspots in the Helium Wallet App.
 
 Because claiming is an explicit action, enlisting a service to claim rewards on all of associated
 Hotspots can be used.
+Information on these claiming services will be provided as they become available.
 
 <!-- TODO: Service -->
 
@@ -75,8 +76,8 @@ As described in [HIP-52: IOT subDAO](https://github.com/helium/HIP/blob/main/005
 launch of the IoT subnetwork will include a premine of 5 billion IOT tokens to Validators and
 Hotspots on the existing IoT network.
 
-The IOT Premine will reward Hotspots contributing to the Network within the 30 days preceding the
-Solana Migration Snapshot.
+The IOT Premine will reward Hotspots contributing and earning on the Network within the 30 days 
+preceding the Solana Migration Snapshot.
 
 :::info What is a Snapshot?
 
@@ -99,14 +100,16 @@ billion tokens, distributed to all active Hotspots at the time of the Snapshot.
 The migration service will consider a Hotspot as "Active" if the Snapshot includes any of the
 following:
 
-- Witnessed and been valid/invalid witnesses.
-- Beaconed and had valid/invalid witnesses.
-- Transferred data.
+- Witnessed and was a valid witness
+- Beaconed and had valid witnesses
+- Transferred LoRaWAN data and been paid for it
 
 A Hotpsot is not "Active" if:
 
-- Beaconed with no valid/invalid witnesses, and
-- Has not passed data
+- Beaconed with no witnesses
+- Beaconed with no valid witnesses
+- Witnessed but as an invalid witness
+- Has not passed data and been paid for it
 
 :::caution Hotspots on the Denylist
 
@@ -122,8 +125,8 @@ data within the 30 days preceding the Snapshot.
 
 ### 5G Hotspot Eligibility
 
-At the time of the Solana Migration, all 5G Hotspots are also LoRaWAN Hotspots and will be allocated
-Premine Rewards under the same conditions as LoRaWAN Hotspots.
+At the time of the Solana Migration, all asserted 5G Hotspots are also valid LoRaWAN Hotspots and 
+will be allocated Premine Rewards under the same conditions as LoRaWAN Hotspots.
 
 :::caution Unasserted 5G Hotspots.
 
