Apply suggestions from code review
Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>

--- a/docs/solana/migration/hotspot-operator.mdx
+++ b/docs/solana/migration/hotspot-operator.mdx
@@ -104,11 +104,10 @@ following:
 - Beaconed and had valid witnesses
 - Transferred LoRaWAN data and been paid for it
 
-A Hotpsot is not "Active" if:
+A Hotspot is not "Active" if it:
 
-- Beaconed with no witnesses
-- Beaconed with no valid witnesses
-- Witnessed but as an invalid witness
+- Has not beaconed with valid witnesses
+- Has not been a valid witness to a beacon
 - Has not passed data and been paid for it
 
 :::caution Hotspots on the Denylist
