adding validator premine eligibitity

--- a/docs/solana/migration/hotspot-operator.mdx
+++ b/docs/solana/migration/hotspot-operator.mdx
@@ -63,8 +63,8 @@ Wallets with a large number, 50 or more, of Hotspots may need to wait up to 48 h
 Solana Migration completes to see all Hotspots in the Helium Wallet App.
 
 Because claiming is an explicit action, enlisting a service to claim rewards on all of associated
-Hotspots can be used.
-Information on these claiming services will be provided as they become available.
+Hotspots can be used. Information on these claiming services will be provided as they become
+available.
 
 <!-- TODO: Service -->
 
@@ -76,7 +76,7 @@ As described in [HIP-52: IOT subDAO](https://github.com/helium/HIP/blob/main/005
 launch of the IoT subnetwork will include a premine of 5 billion IOT tokens to Validators and
 Hotspots on the existing IoT network.
 
-The IOT Premine will reward Hotspots contributing and earning on the Network within the 30 days 
+The IOT Premine will reward Hotspots contributing and earning on the Network within the 30 days
 preceding the Solana Migration Snapshot.
 
 :::info What is a Snapshot?
@@ -84,16 +84,18 @@ preceding the Solana Migration Snapshot.
 When the Helium L1 blockchain halts, a "snapshot" of the state of the Network occurs. The Snapshot
 is a record of the final state of the Helium L1 blockchain.
 
-The migration-service program will use this Snapshot to map existing rewards and Network state 
-to the Solana blockchain.
+The migration-service program will use this Snapshot to map existing rewards and Network state to
+the Solana blockchain.
 
 <!-- TODO: add link to migration-service program -->
 
 :::
 
-The premine allocates IOT tokens in the following proportion: Validators: 2.5 billion tokens,
-distributed proportionately to the amount of HNT staked at the time of the Snapshot. Hotspots: 2.5
-billion tokens, distributed to all active Hotspots at the time of the Snapshot.
+The premine allocates IOT tokens in the following proportion:
+
+- Validators: 2.5 billion tokens, distributed proportionately to the amount of HNT staked at the
+  time of the Snapshot.
+- Hotspots: 2.5 billion tokens, distributed to all active Hotspots at the time of the Snapshot.
 
 ### What is an "Active" Hotspot?
 
@@ -124,7 +126,7 @@ data within the 30 days preceding the Snapshot.
 
 ### 5G Hotspot Eligibility
 
-At the time of the Solana Migration, all asserted 5G Hotspots are also valid LoRaWAN Hotspots and 
+At the time of the Solana Migration, all asserted 5G Hotspots are also valid LoRaWAN Hotspots and
 will be allocated Premine Rewards under the same conditions as LoRaWAN Hotspots.
 
 :::caution Unasserted 5G Hotspots.
@@ -133,5 +135,13 @@ Unasserted 5G Hotspots will not be eligible for the premine as the Active criter
 Hotspot to have an asserted location recorded on the Helium L1 blockchain.
 
 :::
+
+### Validator Eligibility
+
+The 2.5 billion IOT Token Premine to Validators will be distributed to all Active Validators
+proportionately to the amount of HNT staked at the time of the Snapshot.
+
+The migration service will consider a Validator as "Active" if the Snapshot includes any heartbeat
+data from the Validator.
 
 ---
