link fix to make builds happy

--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -126,14 +126,13 @@ For devnet:
 2. Get the list of serialized transactions, which should be sent to Solana:
    `https://migration.web.test-helium.com/migrate/*solana-wallet-address*?limit=1000&offset=0`
 
-3. Submit the transactions to Solana.  
-   You can see typescript code demonstrating how to use this
+3. Submit the transactions to Solana. You can see typescript code demonstrating how to use this
    [here](https://github.com/helium/helium-program-library/blob/master/packages/migration-service/src/test-submit.ts#L37).
 
    Note: Each transaction is only allowed to execute once.
 
 Alternatively, you can use the
-[command line utility](<(https://github.com/helium/helium-program-library/releases/tag/v0.0.27-migration-cli)>)
+[command line utility](https://github.com/helium/helium-program-library/releases/tag/v0.0.27-migration-cli)
 for steps 2-3.
 
 ```
