Add migrate wallet button for exchanges

--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -10,6 +10,7 @@ slug: /solana/migration/exchange
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
+
 :::warning 🚧 This document is a work in progress. 🚧
 
 The documentation on Solana and the upcoming Migration is under development and subject to change.
@@ -49,6 +50,14 @@ The mint IDs are as follows:
 
 Helium wallets use the same ED25519 curve as Solana wallets, resulting in Helium public keys and
 secret keys mapping directly to Solana wallets.
+
+You can either migrate you wallet using this widget:
+
+import { MigrateWallet } from "@theme/MigrateWallet"
+
+<MigrateWallet />
+
+Or continue reading for manual instructions:
 
 ### JavaScript
 
