Add migrate wallet button for exchanges (#1147)
* Add migrate wallet button for exchanges

* kicking build

---------

Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -50,6 +50,14 @@ The mint IDs are as follows:
 Helium wallets use the same ED25519 curve as Solana wallets, resulting in Helium public keys and
 secret keys mapping directly to Solana wallets.
 
+You can either migrate you wallet using this widget:
+
+import { MigrateWallet } from "@theme/MigrateWallet"
+
+<MigrateWallet />
+
+Or continue reading for manual instructions:
+
 ### JavaScript
 
 To get the Solana public key equivalent of a Helium public key in javascript run:
