Add ledger migration

--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -78,6 +78,7 @@ The following are migration guides for different users of Helium:
 - [LoRaWAN Network User](/solana/migration/network-user)
 - [Maker](/solana/migration/maker)
 - [Wallet App User](./solana/migration/wallet-user)
+- [Leder Hardware Wallet User](./solana/migration/ledger)
 
 ---
 
