links to github repo and notes on blind signing

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -7,15 +7,24 @@ description: Ledger Hardware Wallet User Documentation
 slug: /solana/migration/ledger
 ---
 
-The Solana ledger wallet application exists at derivation path 
-44'/501'/n'/0'. Helium wallets exist at derivation path 44'/904'/n'/0'.
+:::info Using the Helium Solana Ledger App
 
-The following utility will migrate all tokens from the helium derivation path
-to the solana derivation path. To get started, install the:
+More information on installing and using the Solana-compatible Helium app for Ledger Wallets in the
+[Github Repo](https://github.com/helium/app-helium-solana).
 
-  * Helium Solana Ledger App
-  * Solana Ledger App
+:::
 
-import { LedgerMigration } from "@theme/LedgerMigration"
+The following utility will migrate all tokens from the Helium derivation path `44'/904'/n'/0'` to
+the Solana derivation path `44'/501'/n'/0'`. To get started, install the:
+
+- [Helium Solana Ledger App](https://github.com/helium/app-helium-solana) from Github
+- [Solana Ledger App](https://support.ledger.com/hc/en-us/articles/360016265659-Solana-SOL-?support=true)
+  using Ledger Live
+
+import { LedgerMigration } from '@theme/LedgerMigration'
 
 <LedgerMigration />
+
+---
+
+## Helium Solana App
