--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -119,6 +119,13 @@ This means common payment transactions and staking should utilize
 
 ## For Ledger Wallet Users
 
+:::tip Migrate Here in Docs!
+
+The [Ledger Hardware Wallet User](/solana/migration/ledger) page has an integrated tool to migrate
+all tokens from the Helium derivation path to the Solana derivation path.
+
+:::
+
 Ledger users will need to update their Helium Ledger App to a version that's pending release. This
 upcoming version will use the Solana private key derivation path that moves all your tokens and
 balances over to Solana. You may need to uninstall any Solana Ledger Apps during the Wallet
