add wallet migration widget to wallet migration page

--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -16,6 +16,15 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 :::
 
+## Migration Utility
+
+You can migrate you wallet using the widget below by entering your Helium or Solana wallet address
+and clicking the "Seed Wallet" buttton.
+
+import { MigrateWallet } from '@theme/MigrateWallet'
+
+<MigrateWallet />
+
 ## For Helium App Users
 
 The Helium app will require a migration to the Helium Wallet app. Wallet migration is necessary to
