--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -344,6 +344,9 @@ the wallet remains a constant.
 
 veHNT quantity decay is granulated per second even though the Epoch period is 24 hours.
 
+It is the current delegated veHNT value at the start of an Epoch that is used for calculating the 
+subDAO utility score during the Epoch.
+
 A 48-month lock-in period has approximately 1461 linear steps between 100 veHNT and 0 veHNT.
 
 > 4 years x 365.25 days epochs per day = 1461 steps
