Help finding Hotspot queries

--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -2,7 +2,7 @@
 id: rewardable-entities
 title: Rewardable Entities
 pagination_label: Rewardable Entities
-sidebar_label: Rewardable Entities
+sidebar_label: Hotspots on Solana
 description: Helium Rewardable Entities Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /solana/rewardable-entites
