--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -57,8 +57,8 @@ explain what you might earn and why.
 
 :::info Where Do Rewards Go?
 
-MOBILE PoC rewards are credited to the Wallet that owns the 5G Hotspot a given Radio is connected to
-when the Rewards Oracle disperses MOBILE PoC Rewards.
+MOBILE PoC rewards will be credited to the Solana NFT that owns the 5G Hotspot a given Radio is 
+connected to when the Rewards Oracle disperses MOBILE PoC Rewards.
 
 :::
 
@@ -79,6 +79,8 @@ As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.m
 [approved by community-wide votes](https://heliumvote.com/14rifUhocpzdwsrWaG5PDbdREDkzyesKe1hXuWzibv8h9DdqKLe),
 the Helium Foundation receives an allocation of 50B (billion) of 250B MOBILE tokens in the form of a
 pre-mine.
+
+[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve) further modifiled the total emissisions to be 200B and started the programatic minting of MOBILE.
 
 The uses of proceeds are roughly defined as follows:
 
@@ -102,8 +104,11 @@ for the MOBILE subDAO. This is spread across three deliverables with 5B MOBILE p
 total grant of 15B MOBILE:
 
 - Milestone 1: Ability for 5G Hotspots to earn MOBILE (by August 2022)
-- Milestone 2: Development and release of programmatic treasury (by October 2022)
-- Milestone 3: Proof-of-Coverage based rewards (by January 2023)
+- Milestone 2: Development and release of programmatic treasury (by October 2022) 
+-   Actual Programatic Minting started Feb 1 2023
+-   The treasury is due to start on April 19 2023
+- Milestone 3: Proof-of-Coverage based rewards (by January 2023) 
+-   Actual date TBC.
 
 The remaining 15B MOBILE is reserved for other work pertaining to Oracles and Mappers development or
 other community contributions.
@@ -116,23 +121,26 @@ Reserved for marketing and educational campaigns around the MOBILE subDAO.
 
 ## Emissions Curve
 
-There is a max supply of 250B (billion) MOBILE with issuance halvenings every two years aligned with
-the HNT issuance halvenings. The first halving will occur on August 1, 2023, to align with HNT
-halving and will continue on a 2-year cycle afterward. Creating a "stub period" as defined by
-[HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md), which will
-begin when standard emissions of MOBILE tokens begin (and MOBILE can be redeemed by HNT in the
-subDAO's treasury).
+HIP 53 defined a max supply of 250B (billion) MOBILE with issuance halvenings every two years 
+aligned withthe HNT issuance halvenings. The first halving will occur on August 1, 2023, to align 
+with HNT halving and will continue on a 2-year cycle afterward. Creating a "stub period" as defined by
+[HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md), which will begin when standard emissions of MOBILE tokens 
+begin (and MOBILE can be redeemed by HNT in the subDAO's treasury).
 
-The date for this is currently TBD and dependent on core developers implementing the HNT token
-treasury and redemption transactions on the Helium Blockchain as defined for all new subDAOs in
-Phase 2 of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md).
+[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve) further modifiled the total emissisions to be 200B and started the programatic minting 
+of MOBILE on Feb 1st 2023.
+
+
+The date for the treasury implementation is April 18th 2023 and dependent on core developers 
+implementing the HNT token treasury and redemption transactions on the Solana Blockchain as 
+defined for all new subDAOs in Phase 2 of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md).
 
 ---
 
 ## Manage Tokens with the Helium Wallet App
 
 A 5G Hotspot with an attached and properly registered Small Cell Radio will start earning MOBILE
-automatically as one "lump sum" to the associated Wallet. You can learn more about calculating
+automatically as one "lump sum" to the associated Hotspot. You can learn more about calculating
 MOBILE Rewards in the [MOBILE Proof of Coverage](/5g-on-helium/mobile-poc) documentation.
 
 Interacting with MOBILE tokens is only possible using the
