--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -80,7 +80,7 @@ As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.m
 the Helium Foundation receives an allocation of 50B (billion) of 250B MOBILE tokens in the form of a
 pre-mine.
 
-[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve) further modifiled the total emissisions to be 200B and started the programatic minting of MOBILE.
+[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve) further modifiled the emission schedule and started the programatic minting of MOBILE.
 
 The uses of proceeds are roughly defined as follows:
 
@@ -127,7 +127,7 @@ with HNT halving and will continue on a 2-year cycle afterward. Creating a "stub
 [HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md), which will begin when standard emissions of MOBILE tokens 
 begin (and MOBILE can be redeemed by HNT in the subDAO's treasury).
 
-[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve) further modifiled the total emissisions to be 200B and started the programatic minting 
+[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve) further modifiled the emission schedule and started the programatic minting 
 of MOBILE on Feb 1st 2023.
 
 
