--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -71,7 +71,7 @@ period in exchange for voting rights and voting power in the HeliumDAO as define
 [HIP-51](https://github.com/helium/HIP/issues/336).
 
 Additionally, this provides other benefits, such as earning MOBILE or IOT tokens, if the holder
-delegates their veHNT to those subDAOs, respectively. After the lock-up period ends, the same amount 
+delegates their veHNT to those subDAOs, respectively. After the lock-up period ends, the same amount
 of HNT is released back to the owner's wallet and is now transferable, if needed.
 
 ### What Was Staked HNT?
@@ -284,17 +284,18 @@ delegating to that subDAO.
    decay cooldown period starts immediately or lock-up period is rolling with a decay countdown
    starting at a future date to be decided (default) The granularity of selection of lock-up period
    is in days.
-3. Using the Helium Wallet App browser (Globe icon) access /Realms, delegate that veHNT into one or 
-   more existing subDAOs. You may have to complete several transactions depending on how many subDAOs 
-   you delegate to, or if you want different amounts delegated for different lock-up periods.
+3. Using the Helium Wallet App browser (Globe icon) access /Realms, delegate that veHNT into one or
+   more existing subDAOs. You may have to complete several transactions depending on how many
+   subDAOs you delegate to, or if you want different amounts delegated for different lock-up
+   periods.
 4. Your delegated HNT will count towards the subDAOs Utility Score and provide increased HNT
    deposits in the subDAO's treasury per epoch.
 
 This process should be simple in the [Helium Wallet App](/wallets/helium-wallet-app). More
 instructions will be provided on Realms usage as we get closer to the Solana migration.
 
-The Helium Wallet App is Solana compatible. All staking and vote escrow delegation operations
-will be performed within the Helium Wallet app browser and Realms
+The Helium Wallet App is Solana compatible. All staking and vote escrow delegation operations will
+be performed within the Helium Wallet app browser and Realms
 
 - Staking HNT to veHNT
 - Increasing the veHNT staking period for existing veHNT
@@ -333,7 +334,7 @@ No. You can hold your veHNT as is or delegate to a subDAO at any time.
 :::note
 
 Changing delegation is allowed, but any delegation changes within a Solana Epoch will void any
-delegation rewards within that Epoch.  A Solana Epoch is 24 hours long and starts and ends at 
+delegation rewards within that Epoch. A Solana Epoch is 24 hours long and starts and ends at
 00:00:00 UTC time.
 
 :::
@@ -345,7 +346,7 @@ the wallet remains a constant.
 
 veHNT quantity decay is granulated per second even though the Epoch period is 24 hours.
 
-It is the current delegated veHNT value at the start of an Epoch that is used for calculating the 
+It is the current delegated veHNT value at the start of an Epoch that is used for calculating the
 subDAO utility score during the Epoch.
 
 A 48-month lock-in period has approximately 1461 linear steps between 100 veHNT and 0 veHNT.
@@ -385,9 +386,8 @@ is not a token.
 
 ### How Do I Buy veHNT or Any of the veDNTs?
 
-You cannot buy veHNT, veIOT or veMOBILE. They are not a tradable tokens. veHNT can only be
-obtained by staking HNT with a lock-up period. Likewise, for veIOT or veMOBILE.
-
+You cannot buy veHNT, veIOT or veMOBILE. They are not a tradable tokens. veHNT can only be obtained
+by staking HNT with a lock-up period. Likewise, for veIOT or veMOBILE.
 
 veHNT and veDNTs have no price in the larger crypto markets.
 
@@ -396,9 +396,9 @@ veHNT and veDNTs have no price in the larger crypto markets.
 The DAO Utility score is described in [HIP-51](https://github.com/helium/HIP/issues/336)
 
 Each new subDAO of HNT has a Utility Score that mathematically represents the proportion shared of
-HNT tokens distributed to them every epoch from the fixed amount allocated to all subDAOs. This is 
-currently 68% until April 1st 2023. The higher the Utility Score, the more significant the proportion
-of this 68% of HNT is emitted to that subDAO's treasury per epoch.
+HNT tokens distributed to them every epoch from the fixed amount allocated to all subDAOs. This is
+currently 68% until April 1st 2023. The higher the Utility Score, the more significant the
+proportion of this 68% of HNT is emitted to that subDAO's treasury per epoch.
 
 Delegating veHNT to IOT or MOBILE increases the `V` value in the
 [HIP-51 DAO Utility Score](https://github.com/helium/HIP/blob/main/0051-helium-dao.md#omni-protocol-poc-incentive-model)
@@ -427,5 +427,5 @@ They may decrease when:
 - More Hotspots are online in other subDAOs with a non zero onboarding fee.
 - More data is transferred and burned in other subDAOs.
 
-Thus it can be observed that delegating more or all of your veHNT to a specific subDAO has 
-the opportunity to both increase or decrease your subDAO earnings from delegation.
+Thus it can be observed that delegating more or all of your veHNT to a specific subDAO has the
+opportunity to both increase or decrease your subDAO earnings from delegation.
